<resources>
    <string name="app_name">FilamentAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donut">Reyong</string>
    <string name="gangsa">Gender</string>
    <string name="bugatti">Bugatti</string>
    <string name="kipas_angin">Kipas Angin</string>
    <string name="tempat_duduk">Tempat Duduk</string>
    <string name="angklung">Ceng Ceng Ricik</string>
    <string name="let_s_learn_gamelan_bali">Let’s learn Gamelan Bali!</string>
    <string name="register_to_create_account">Register to create account</string>
    <string name="input_your_username">Input your username</string>
    <string name="username">Full Name</string>
    <string name="email">Email</string>
    <string name="input_your_email">Input your email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="are_you_have_an_account_let_s_login">Are you have an account? Let’s login!</string>
    <string name="register_illustration">Register illustration</string>
    <string name="login_illustration">Login illustration</string>
    <string name="welcome">Welcome!</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login">Login</string>
    <string name="are_you_new_using_this_app_let_s_register_first">New using this app? Let’s register first!</string>
    <string name="gamelan_bali">Gamelan Gong Kebyar</string>
    <string name="dummy_description">Gamelan ini adalah gamelan yang sudah memakai kendang sebagai instrumen....</string>
    <string name="gol_value">Gol. %s</string>
    <string name="gol_value_full">Golongan %s</string>
    <string name="sanggar_dummyu">Sanggar Widya Sabha</string>
    <string name="sanggar_number_dummy">6287701450383</string>
    <string name="search_gamelan_bali">Search Gamelan Bali</string>
    <string name="gamelan_bali_rv">Gamelan Bali</string>
    <string name="see_all">See All \></string>
    <string name="instrumen_gamelan">Instrumen Gamelan</string>
    <string name="sanggar_gamelan_bali">Sanggar Gamelan Bali</string>
    <string name="error_message_connection">Kesalahan koneksi, cek koneksimu!</string>
    <string name="cannot_empty">Tidak boleh kosong!</string>
    <string name="pilih_status_approval">Pilih status approval!</string>
    <string name="image_cannot_empty">Gambar sanggar harus diisi!</string>
    <string name="format_phone">Format: +6287714504894</string>
    <string name="material_cannot_empty">Mohon isi Material!</string>
    <string name="role_cannot_empty">Mohon isi Role!</string>
    <string name="cannot_field">Alamat tidak boleh kosong!</string>
    <string name="email_not_valid">Email tidak valid!</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="upacara">Jenis Upacara</string>
    <string name="tambahkan_upacara">+ Tambahkan Upacara Terkait</string>
    <string name="audio_gamelan">Audio Gamelan</string>
    <string name="audio_tabuh">Audio Tabuh</string>
    <string name="dewa_yadnya">Dewa Yadnya</string>
    <string name="fungsi">Fungsi</string>
    <string name="material">Material</string>
    <string name="_3d_view">3D View</string>
    <string name="edit_sanggar">Edit Sanggar</string>
    <string name="nama_sanggar">Nama Sanggar</string>
    <string name="dummy_number">6286757573745</string>
    <string name="alamat">Alamat</string>
    <string name="see_on_google_maps">See on Google Maps</string>
    <string name="lihat_lokasi">Lihat Lokasi</string>
    <string name="telepon">Telepon</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="list_instrumen_gamelan">List Instrumen Gamelan</string>
    <string name="list_gamelan_bali">List Gamelan Bali</string>
    <string name="semua_sanggar">Semua Sanggar</string>
    <string name="sanggar_anda">Sanggar Anda</string>
    <string name="search_sanggar">Search Sanggar</string>
    <string name="list_sanggar">List Sanggar</string>
    <string name="search_instrument">Search Instrument</string>
    <string name="input_form_sanggar">Input Form Sanggar</string>
    <string name="nama_jalan">Nama Jalan</string>
    <string name="nama_desa">Nama Desa</string>
    <string name="nama_kecamatan">Nama Kecamatan</string>
    <string name="nama_kabupaten">Nama Kabupaten</string>
    <string name="nama_provinsi">Nama Provinsi</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="upload_gambar_sanggar">Upload gambar sanggar</string>
    <string name="gambar_added">Gambar Telah Ditambahkan</string>
    <string name="audio_added">Audio Telah Ditambahkan</string>
    <string name="upload_data_sanggar">Upload Data Sanggar</string>
    <string name="nomor_whatsapp">Nomor Whatsapp</string>
    <string name="hapus_sanggar">Hapus Sanggar</string>
    <string name="delete_word">Apakah yakin \n menghapus data?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="option_1">Option 1</string>
    <string name="pilih_kabupaten">Pilih Kabupaten</string>
    <string name="kabupaten_added">Kabupaten Dipilih</string>
    <string name="pilih">Pilih</string>
    <string name="pilih_kecamatan">Pilih Kecamatan</string>
    <string name="pilih_desa">Pilih Desa</string>
    <string name="bali">Bali</string>
    <string name="pilih_role">Pilih Role</string>
    <string name="role_user">Role User</string>
    <string name="pilih_gamelan">Pilih Gamelan</string>
    <string name="gamelan_added">Gamelan Telah Ditambah</string>
    <string name="instrument_added">Instrument Telah Ditambah</string>
    <string name="audio_instrumen">Audio Instrumen</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="golongan_tua">Golongan Tua</string>
    <string name="golongan_madya">Golongan Madya</string>
    <string name="golongan_baru">Golongan Baru</string>
    <string name="input_form_instrument">Input Form Instrument</string>
    <string name="nama_instrument">Nama Instrument</string>
    <string name="fungsi_instrument">Fungsi Instrument</string>
    <string name="bahan_material_instrumen">Bahan Material Instrumen</string>
    <string name="tambahkan_bahan_material">+ Tambahkan Bahan Material</string>
    <string name="gambar_instrumen">Gambar Instrumen</string>
    <string name="tambahkan_gambar_preview">+ Tambahkan Gambar Preview</string>
    <string name="tambahkan_gambar_bagian_dimainkan">+ Tambahkan Gambar Bagian Dimainkan</string>
    <string name="gambar_3d_instrumen">Gambar 3D Instrumen</string>
    <string name="upload_gambar_3d_instrumen">Upload Gambar 3D Instrumen</string>
    <string name="upload_data_instrumen">Upload Data Instrumen</string>
    <string name="upload_audio_instrument">Upload Audio Instrument</string>
    <string name="tambahkan_audio_instrument">+ Tambahkan Audio Instrument</string>
    <string name="input_audio">Input Audio</string>
    <string name="nama_audio">Nama Audio</string>
    <string name="tambah_audio">Tambah Audio</string>
    <string name="selesai">Selesai</string>
    <string name="edit_instrument">Edit Instrument</string>
    <string name="hapus_instrument">Hapus Instrument</string>
    <string name="edit_gamelan_bali">Edit Gamelan</string>
    <string name="hapus_gamelan">Hapus Gamelan</string>
    <string name="upload_data_gamelan">Upload Data Gamelan</string>
    <string name="input_form_gamelan">Input Form Gamelan</string>
    <string name="nama_gamelan">Nama Gamelan</string>
    <string name="golongan">Golongan</string>
    <string name="pilih_golongan">Pilih Golongan</string>
    <string name="pilih_instrument_gamelan">Pilih Instrument Gamelan</string>
    <string name="deskripsi_audio">Deskripsi Audio</string>
    <string name="upload_tabuh_gamelan">Upload Tabuh Gamelan</string>
    <string name="tambahkan_tabuh_gamelan">+ Tambahkan Tabuh Gamelan</string>
    <string name="status">Status</string>
    <string name="filter">Filter</string>
    <string name="gunakan_filter">Gunakan Filter</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="upload_file_pendukung">Upload File Bukti</string>
    <string name="file_selected">File Selected!</string>
    <string name="upload_bukti_kepemilikan">Upload Bukti Kepemilikan</string>
    <string name="sertifikat">Lihat Sertifikat</string>
    <string name="lihat_dokumen">Dokumen</string>
    <string name="edit_approval">Edit Approval</string>
    <string name="update_approval">Update Approval</string>
    <string name="ubah">Ubah</string>
    <string name="general_users">General Users</string>
    <string name="ahli_gamelan">Ahli Gamelan</string>
    <string name="search_users">Search Users</string>
    <string name="users">Users</string>
    <string name="total_users">Total Users</string>
    <string name="pengguna">Pengguna</string>
    <string name="ahli_gamelan_bali">Ahli Gamelan Bali</string>
    <string name="admin">Admin</string>
    <string name="users_list">Users List</string>
    <string name="year">Year</string>
</resources>