<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/title_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="23dp"
        android:fontFamily="@font/figtree_regular"
        android:text="@string/filter"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/figtree_semi_bold"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/clear_filter"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_approval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/figtree_regular"
        android:text="@string/status"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_filter" />

    <ListView
        android:id="@+id/listViewStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_approval" />

    <TextView
        android:id="@+id/title_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/figtree_regular"
        android:text="@string/pilih_role"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewStatus" />

    <ListView
        android:id="@+id/listViewRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_role" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pilihFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/figtree_semi_bold"
        android:padding="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/gunakan_filter"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewRole" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/batalFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="#F3F3F3"
        android:fontFamily="@font/figtree_semi_bold"
        android:padding="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/batal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pilihFilter" />

</androidx.constraintlayout.widget.ConstraintLayout>
